Fix overflow. Final commit

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -79,6 +79,8 @@ a {
 }
 
 .panel-body {
+	height: 750px;
+	width: 100%;
 	overflow: scroll;
 }
 
